Fix cell overflow when height is not fixed
[multiple-tables](http://swimlane.github.io/ngx-datatable/#multiple-tables) demo cells overflow on second table where `[rowHeight]="'auto'"`

--- a/src/components/datatable.component.scss
+++ b/src/components/datatable.component.scss
@@ -100,6 +100,7 @@
 
   .datatable-body-cell,
   .datatable-header-cell {
+    overflow-x: hidden;
     vertical-align: top;
     display: inline-block;
     line-height: 1.625;
